--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "antd": "^2.13.9",
     "node-sass": "^4.14.1",
     "react": "^16.9.0",
-    "react-dom": "^16.9.0"
+    "react-dom": "^16.9.0",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
